fix(arena-chart-filters): [SHOT CHARTS] At 1024px (iPad landscape) the right side player dropdown is out of place
To encapsulate filters without overflowing, all elements within arena-chart-filters must be fixed in width.
1) Updates multiselect styles to allow internal text overflow hiding with ellipsis
2) Pushes right-most multi-select dropdown to the left to stay within view
3) Move generic filter styles to theme

--- a/theme/checkbox.less
+++ b/theme/checkbox.less
@@ -2,6 +2,7 @@
 
 krossover-checkbox {
     display: inline-block;
+    margin: 0px 2px;
 }
 
 .krossover-checkbox {
@@ -36,7 +37,9 @@ krossover-checkbox {
     }
 
     i {
-        &.icon-check-square, &.icon-check-square-o {
+        &.icon-check-square,
+        &.icon-check-square-o,
+        &.icon-minus-square-o {
             color: @brand-primary;
         }
     }
