--- a/theme/multiselect.less
+++ b/theme/multiselect.less
@@ -31,6 +31,8 @@
 
         :first-child {
             flex: 1;
+            width: 80px;
+            .text-overflow();
         }
     }
 
